# playlist-syncer

./: .gitignore  README.md  SKILL.md  blog.md  discovery_notes.md  pyproject.toml
beatport_sync/: __main__.py  api.py  cli.py  db.py  musickit.py  sync.py
beatport_sync/bridge/: musickit_bridge.swift
helpers/: backup_apple_music.py  clear_apple_music.py  delete_beatport_track.py  export_apple_music.py  restore_apple_music.py
playlist_syncer/: __init__.py  __main__.py  api.py  classifier.py  cli.py  db.py  matching.py  musickit.py  sync.py
playlist_syncer/bridge/: musickit_bridge.swift
references/: classifier.md
scripts/: automate.py  automate_template.py  discovery_template.py  probe_actions.py  probe_add.py  probe_api.py  probe_delete.py  probe_dup.py  probe_full.py  probe_login.py  probe_playlists.py
tests/: test_beatport.py  test_classifier.py  test_db.py  test_sync.py
