[project]
name = "beatport-sync"
version = "0.1.0"
description = "CLI tool to migrate Apple Music library/playlists to Beatport genre playlists."
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.3",
    "httpx>=0.28.1",
    "playwright>=1.58.0",
    "rich>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]

[project.scripts]
beatport-sync = "beatport_sync.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["beatport_sync"]

[tool.hatch.build.targets.wheel.force-include]
"beatport_sync/bridge/musickit_bridge.swift" = "beatport_sync/bridge/musickit_bridge.swift"

[tool.pytest.ini_options]
testpaths = ["tests"]
