[project]
name = "playlist-syncer"
version = "0.1.0"
description = "CLI tool to sync Apple Music library/playlists across music platforms."
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.3",
    "httpx>=0.28.1",
    "playwright>=1.58.0",
    "playwright-stealth>=1.0.6",
    "rich>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]

[project.scripts]
playlist-syncer = "playlist_syncer.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["playlist_syncer"]

[tool.hatch.build.targets.wheel.force-include]
"playlist_syncer/bridge/musickit_bridge.swift" = "playlist_syncer/bridge/musickit_bridge.swift"

[tool.pytest.ini_options]
testpaths = ["tests"]
